
- internal actions `.min` and `.max` may have a query as second argument.

- several (minor) improvements in Jason-CLI. About running a project:

  * `jason x.mas2h` uses gradle to run the application
  * `jason mas start --mas2j=x.mas2h` runs without gradle. The classpath might be informed using `--cp` if necessary.

- update doc for new Jason web site: https://jason-lang.github.io



== version 3.2 (2023-04-15)

The main new feature of Jason 3.2 is the Jason Command Line Interface (*JasonCLI*). This tool is created to support the creation and monitoring of Jason application independently of IDEs. More information xref:./jason-cli/readme.adoc[here].

- Java17 is used
- some bugs were fixed
- preliminary support for packages (used by JaCaMo)
- Jason is available in https://central.sonatype.com/artifact/io.github.jason-lang/jason-interpreter[Maven Central]
- `mas2j` files do not handle java class path  anymore. Gradle should be used for that. The command `jason app add-gradle` turn a Jason project into a Gradle project. It also helps your IDE to find Jason dependencies when programming Java classes for the environment, internal actions, ...
- to use JADE, the Jason project should have a Gradle script. Then `./gradlew runJade` can be  used to start the MAS on top of JADE.  

The project is cleaned:

- jEdit is removed (JasonCLI and third party IDEs are proposed)
- Ant is replaced by Gradle
- Java Web Start is not used anymore

== version 3.1 (2022-03-23)

- This release only contains bug fixes

== version 3.0 (2021-09-07)

- The major contribution of this version is the inclusion of Jason(ER), see papers https://link.springer.com/chapter/10.1007%2F978-3-030-25693-7_3[AgentSpeak(ER): Enhanced Encapsulation in Agent Plans] and http://lamas20.ipipan.waw.pl/assets/proceedings/paper-12.pdf[Encapsulating Reactive Behaviour in Goal-based Plans for Programming BDI Agents].
  * improved encapsulation (sub-plans)
  * goal condition (to be dropped)